--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 .gradle
+.idea
 /build/
-
-# Ignore Gradle GUI config
-gradle-app.setting
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
