--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,8 @@
 .idea
 /build/
 
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+# Avoid ignoring Gradle wrapper jar file
 !gradle-wrapper.jar
 
 # Cache of project
 .gradletasknamecache
-
-# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
-# gradle/wrapper/gradle-wrapper.properties
